# chain-registry-core

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  DEEP_DIVE_ANALYSIS.md  DELIVERABLES_INDEX.md  DOCKER.md  Dockerfile  Dockerfile.local  Dockerfile.secure  Dockerfile.stress-test  Dockerfile.windows  Makefile  README.md  SimpleStaking.sol  SimpleToken.sol  TESTNET_READINESS_REPORT.md  build-docker-windows-v2.ps1  build-docker-windows.ps1  build-docker.ps1  build-docker.sh  docker-compose.anvil.yml  docker-compose.light.yml  docker-compose.local-testnet.yml  docker-compose.prebuilt.yml  docker-compose.testnet.yml  docker-compose.validator.yml  docker-compose.yml  foundry.toml  local-soak.ps1  local-testnet.ps1  manifest-v2.json  manifest.json  nginx-explorer.conf  rebuild-docker.ps1  run-validator.ps1  test-docker.ps1  test-docker.sh  testnet.ps1  (+2 more)
.cargo/: config.toml
cache/: solidity-files-cache.json
circuits/: DoubleSignProof.circom  PackageValidator.circom  README.md  build_circuit.sh  package.json
config/: relayer-policy.example.json
contracts/: Appeal.sol  BatchOperations.sol  CregToken.sol  CrossChainRegistry.sol  Governance.sol  GovernanceV2.sol  Groth16Verifier.sol  PackageInsurance.sol  PinningRewards.sol  README.md  Registry.sol  Reputation.sol  SlashingEvidence.sol  Staking.sol  VRF.sol  ValidatorRewards.sol  ZKSlashingVerifier.sol  ZKVerifier.sol  foundry.toml
crates/cli/: Cargo.toml
crates/cli/examples/: sign_validator_identity.rs
crates/cli/src/: advanced.rs  audit.rs  batch.rs  blocks.rs  chain_spec.rs  config.rs  config_file.rs  dashboard_enhanced.rs  diff.rs  doctor.rs  error_help.rs  explorer_tui.rs  faucet_client.rs  graph.rs  info.rs  install.rs  intercept.rs  keygen.rs  lockfile.rs  main.rs  multisig.rs  osv_snapshot.rs  output.rs  policy.rs  publish.rs  recovery.rs  retry.rs  sbom.rs  search.rs  stake.rs  testnet.rs  update.rs  verify.rs  watch.rs  wizard.rs
crates/cli/src/shims/: cargo_shim.rs  gem.rs  mvn.rs  npm.rs  pip.rs
crates/common/: Cargo.toml  build.rs
crates/common/examples/: compute_genesis_hash.rs  sign_chain_spec.rs  verify_chain_spec.rs
crates/common/proto/: node.proto
crates/common/src/: block.rs  chain_spec.rs  error.rs  feature_flags.rs  hot_key.rs  intelligence.rs  lib.rs  package.rs  shielded_wire.rs  verdict.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: evidence_votes.rs  forced_inclusion.rs  lib.rs  pbft.rs  validator_set.rs  vote_accumulator.rs  vrf.rs
crates/cross-chain/: Cargo.toml
crates/cross-chain/src/: lib.rs
crates/db-sync/: Cargo.toml
crates/db-sync/src/: lib.rs  schema.rs  sync_worker.rs
crates/faucet/: Cargo.toml
crates/faucet/src/: faucet.html  main.rs
crates/insurance/: Cargo.toml
crates/insurance/src/: claims.rs  lib.rs  risk_model.rs
crates/ipfs-pinner/: Cargo.toml
crates/ipfs-pinner/src/: contract.rs  lib.rs  pinner.rs  verifier.rs
crates/ml-validator/: Cargo.toml
crates/ml-validator/src/: bootstrap_threats.json  deep_scan.rs  features.rs  lib.rs  osv_client.rs  osv_snapshot.rs  threat_intel.rs  yara_scanner.rs
crates/node/: Cargo.toml
crates/node/src/: admission_scan.rs  api.rs  block_producer.rs  bridge.rs  bridge_anchors.rs  chain_spec_boot.rs  chain_store.rs  config.rs  consensus_admission.rs  db_sync_proxy.rs  events.rs  explorer.rs  finalized_tx.rs  gossip.rs  json_rpc.rs  l1_quorum.rs  lib.rs  main.rs  metrics.rs  openapi.rs  p2p.rs  p2p_rate_limit.rs  package_admission.rs  pending_pool.rs  pidlock.rs  proof.rs  publisher_index.rs  rate_limit.rs  state.rs  sync.rs  validator_pipeline.rs  validator_registry_gossip.rs  validator_set_history.rs  validator_set_sync.rs
crates/node/src/grpc/: mod.rs  server.rs
crates/node/src/intelligence/: mod.rs  store.rs  worker.rs
crates/node/tests/: e2e.rs  integration.rs
crates/relayer/: Cargo.toml
crates/relayer/src/: main.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: cache.rs  chain_client.rs  downloader.rs  lib.rs  light_client.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: env.rs  lib.rs  vault.rs
crates/threshold-encryption/: Cargo.toml
crates/threshold-encryption/src/: access_control.rs  distribution.rs  lib.rs  service.rs  shamir.rs
crates/threshold-encryption/tests/: e2e.rs
crates/validator/: Cargo.toml
crates/validator/data/: typosquat.json
crates/validator/src/: bundle.rs  diff.rs  lib.rs  llm.rs  pgp.rs  report.rs  reputation.rs  risk.rs  sandbox.rs  static_analysis.rs  typosquat.rs  wasm_sandbox.rs
crates/validator/src/intelligence/: mod.rs
crates/validator/src/llm/: cache.rs  context.rs  escalation.rs  reviewer.rs
crates/validator/tests/: malicious_fixtures.rs
crates/wasm-sandbox/: Cargo.toml
crates/wasm-sandbox/src/: capabilities.rs  lib.rs  limits.rs
crates/zk-validator/: Cargo.toml
crates/zk-validator/src/: batch.rs  circuits.rs  constraints.rs  lib.rs  slashing.rs
docs/: CREG_LIMITATIONS_PUBLIC_READINESS_PLAN.md  DATABASE_SCHEMA.md  EXTERNAL_COPY_CHECKLIST.md  PUBLIC.md  PUBLIC_COPY_REVIEW.md  PUBLIC_TESTNET_QUICKSTART.md  SEC-401-AUDIT-SCOPE.md  TESTNET_PHASE_SCOPE.md
migrations/: 001_db_sync_bootstrap.sql  002_testnet_extras.sql  README.md
rules/: supply_chain.yar
schemas/: package-intelligence-report.v1.json
scripts/: clean-rust-targets.ps1  ddc-verify.sh  install-creg.ps1  install-creg.sh  local-soak-testnet.ps1  release-assurance.sh  smoke-test-local-testnet.ps1  start-local-testnet.ps1  validate-consensus-evidence.mjs  validate-consensus-evidence.sh
sepolia-node-data/: validator-set-sync.cursor.json
testnet/: .env.example  Dockerfile.faucet  OPERATOR.md  QUICKSTART.md  README.md  SOAK_TEST.md  SimpleStaking.sol  SimpleToken.sol  StakeNoConst.sol  Staking.sol  _source-sepolia-env.sh  approve-validator-governance-sepolia.ps1  build-3node-secure-image.ps1  build-3node-secure-image.sh  chain-spec.example.json  chain-spec.local.json  chain-spec.local.json.sig  chain-spec.sepolia.json  chain-spec.sepolia.json.sig  check-governance-signer.ps1  check-publisher-stake.ps1  docker-compose.3node-ingress.yml  (+60 more)
(+178 files in other folders)
