[package]
name    = "chain-registry-cli"
version = "0.1.0"
edition = "2021"

# Builds one binary per supported package manager shim.
[[bin]]
name = "creg"         # main CLI tool: `creg install`, `creg publish`, etc.
path = "src/main.rs"

[[bin]]
name = "npm"          # PATH shim — intercepts `npm install`
path = "src/shims/npm.rs"

[[bin]]
name = "pip"          # PATH shim — intercepts `pip install`
path = "src/shims/pip.rs"

[[bin]]
name = "cargo-shim"   # PATH shim — intercepts `cargo add`
path = "src/shims/cargo_shim.rs"

[[bin]]
name = "gem"          # PATH shim — intercepts `gem install`
path = "src/shims/gem.rs"

[[bin]]
name = "mvn"          # PATH shim — intercepts `mvn` dependency resolution
path = "src/shims/mvn.rs"

[dependencies]
common       = { path = "../common" }
resolver     = { path = "../resolver" }
validator    = { path = "../validator" }
zk-validator = { path = "../zk-validator" }
ml-validator = { path = "../ml-validator" }
wasm-sandbox = { path = "../wasm-sandbox" }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
clap       = { version = "4", features = ["derive", "env", "cargo"] }
clap_complete = "4"
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest    = { workspace = true, features = ["stream", "multipart", "json"] }
futures    = { workspace = true }
chrono     = { workspace = true }
ed25519-dalek = { workspace = true }
dirs       = "5"
hex        = { workspace = true }
rand       = { workspace = true }
flate2     = "1"
tar        = "0.4"
colored   = "2"
dialoguer = "0.11"
which     = "6"
ratatui   = "0.26"
crossterm = "0.27"
indicatif = "0.17"
tokio-stream = "0.1"
aes-gcm      = "0.10"
scrypt       = "0.11"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
k256         = { version = "0.13", features = ["ecdsa"] }
sha3         = "0.10"
sha2         = "0.10"
hmac         = "0.12"
bip39        = { version = "2.0", features = ["rand"] }
toml         = "0.8"
urlencoding  = "2.1"
whoami       = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
