[package]
name    = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
sha2       = { workspace = true }
hex        = { workspace = true }
thiserror  = { workspace = true }
chrono     = { workspace = true }
uuid       = { workspace = true }
ed25519-dalek = { workspace = true }
tonic      = { workspace = true }
prost      = { workspace = true }
prost-types = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
rand       = { workspace = true }
aes-gcm    = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

[build-dependencies]
tonic-build = "0.12"

[lints]
workspace = true
