[package]
name    = "consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
common     = { path = "../common" }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
chrono     = { workspace = true }
hex        = { workspace = true }
sha2       = { workspace = true }
rand       = { workspace = true }

ed25519-dalek = { workspace = true }

[lints]
workspace = true
