[package]
name = "cross-chain"
version = "0.1.0"
edition = "2021"
authors = ["Chain Registry Team"]
description = "Cross-chain package verification for multi-chain support"

[dependencies]
# Ethereum client
ethers = { version = "2", features = ["rustls", "ws"] }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Common crate
common = { path = "../common" }

[dev-dependencies]
tokio-test = "0.4"

[lints]
workspace = true
