[package]
name = "faucet"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
chain-registry-secrets = { path = "../secrets" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
alloy = { workspace = true }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
tls = ["axum-server"]

[lints]
workspace = true
