[package]
name = "chain-registry-relayer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "creg-relayer"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
chain-registry-secrets = { path = "../secrets" }
tokio = { workspace = true }
axum = { workspace = true, features = ["json"] }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
alloy = { workspace = true }
hex = { workspace = true }
dashmap = "5.5"
k256 = { version = "0.13", features = ["ecdsa"] }
[lints]
workspace = true
