[package]
name    = "resolver"
version = "0.1.0"
edition = "2021"

[dependencies]
common     = { path = "../common" }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
chrono     = { workspace = true }
reqwest    = { workspace = true }
sled       = { workspace = true }
hex        = { workspace = true }
sha2       = { workspace = true }
ed25519-dalek = { workspace = true }
urlencoding = { workspace = true }
tonic      = { workspace = true }
prost      = { workspace = true }
futures    = { workspace = true }
dirs        = "5"

[lints]
workspace = true
