[package]
name = "chain-registry-secrets"
version = "0.1.0"
edition = "2021"
description = "Hot secp256k1 key loading from env or HashiCorp Vault (SEC-301b)"

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
