[package]
name = "threshold-encryption"
version = "0.1.0"
edition = "2021"
authors = ["Chain Registry Team"]
description = "Threshold encryption using Shamir Secret Sharing for private registries"

[dependencies]
# Secret sharing (we implement our own)

# Cryptography
aes-gcm = "0.10"
aes = "0.8"
cipher = "0.4"
rand = { workspace = true }
sha2 = { workspace = true }
sha3 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"

# Elliptic curve for threshold signatures
k256 = { version = "0.13", features = ["ecdh", "schnorr"] }
elliptic-curve = "0.13"

# Ed25519 for signing decryption share responses
ed25519-dalek = { workspace = true }

# Hex encoding (DecryptionClient/DecryptionService identity derivation)
hex = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Common crate
common = { path = "../common" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
