[package]
name = "zk-validator"
version = "0.1.0"
edition = "2021"
authors = ["Chain Registry Team"]
description = "Zero-knowledge proof validation for package verification"

[dependencies]
# Arkworks for ZK proofs
ark-bn254 = { version = "0.4", features = ["curve"] }
ark-groth16 = { version = "0.4" }
ark-snark = { version = "0.4" }
ark-ff = { version = "0.4" }
ark-ec = { version = "0.4" }
ark-serialize = { version = "0.4" }
ark-relations = { version = "0.4" }
ark-r1cs-std = { version = "0.4" }
ark-crypto-primitives = { version = "0.4", features = ["r1cs"] }

# Cryptographic primitives
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
rayon = "1.7"
ed25519-dalek = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Async
tokio = { version = "1.0", features = ["process", "fs", "rt"] }

# Chain Registry common
common = { path = "../common" }

[dev-dependencies]
ark-std = { version = "0.4" }
rand = { workspace = true }

[lints]
workspace = true
